# simple-rasterizer

./: 1sphere.txt  2spheres1.txt  2spheres2.txt  2spheres3.txt  CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Image.h  LightSource.cpp  LightSource.h  Matrix.h  README.md  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Surface.cpp  Surface.h  TriMesh.cpp  TriMesh.h  Utils.cpp  Utils.h  ballring.txt  kitten.txt  main.cpp  myscene.txt
